# scaflog-mcp-server

./: .gitignore  pyproject.toml
config/resources/: core.json  task_names.json
src/: run.py
src/scaflog_mcp_server/: __init__.py  config.py  environment.py  logger.py  models.py  resource_config.py  resource_manager.py  scaflog_resources.py  server.py  zoho_auth.py  zoho_client.py  zoho_config.py
tests/: test_main.py
