[project]
name = "scaflog_mcp_server"
version = "0.1.0"
description = "Scaflog MCP Server"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "black",
    "isort", 
    "flake8",
    "fastmcp",
    "httpx",
    "python-dotenv"  # Added since we're using dotenv
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3 

[tool.hatch.build.targets.wheel]
packages = ["src/scaflog_mcp_server"]